<resources>
    <string name="app_name">AquaJmt</string>

    <string name="email_activation_in_progress">Please wait while we\'re activating your Aqua account.</string>
    <string name="email_activation_successful">Your account has been successfully activated.</string>
    <string name="email_activation_failed">Your account was not successfully activated.</string>
    <string name="email_activation_error">An error occurred while trying to activate your email.</string>
    <string name="email_activation_resent">An activation email has been resent to the email linked to your account.\nPlease wait for it to arrive.</string>
    <string name="email_activation_btn_ok">OK</string>
    <string name="email_activation_btn_retry">Retry</string>

    <string name="error_message_network">An error occured. Please try again.</string>

    <string name="dismiss">Dismiss</string>
    <string name="water_types_validation_text">You need to select at least one water type.</string>
    <string name="container_types_validation_text">You need to select at least one container type.</string>
    <string name="price_validation_text">The price you entered is invalid.</string>
    <string name="time_invalid_validation">The time you entered is invalid.</string>
    <string name="days_open_validation_text">You need to select at least one day to open.</string>
    <string name="uid_validation_empty_text">Please enter a unique ID for your shop.</string>
    <string name="uid_validation_start_text">Your shop\'s unique ID must start in a letter.</string>
    <string name="uid_validation_chars_text">You shop\'s unique ID should only contain a letter, number, \'-\', and \'_\'</string>
    <string name="uid_validation_used_text">The unique ID you have chosen is already used by another shop.</string>
    <string name="title_activity_login">Sign in</string>




    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
