<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/container_details"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <TextView
                    android:text="Create shop"
                    style="@style/form_header" />

                <TextView
                    android:text="Basic Information"
                    style="@style/form_subheader" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_details">

                <TextView
                    android:text="Unique ID"
                    style="@style/form_label" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_unique_id"
                        tools:text="wilkins-linear-mkt"
                        android:inputType="text"
                        style="@style/form_text_box"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:id="@+id/img_valid_uid"
                        android:src="@drawable/ic_check_black_24dp"
                        android:tint="@android:color/holo_green_dark"
                        tools:visibility="visible"
                        android:visibility="gone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:id="@+id/img_invalid_uid"
                        android:src="@drawable/ic_close_black_24dp"
                        android:tint="@android:color/holo_red_dark"
                        tools:visibility="gone"
                        android:visibility="gone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"/>

                    <ProgressBar
                        android:id="@+id/prg_loading_uid"
                        android:progressTint="@android:color/darker_gray"
                        tools:visibility="gone"
                        android:visibility="gone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_uid_validation_used"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/uid_validation_used_text"
                    style="@style/validation_text_vll" />

                <TextView
                    android:id="@+id/txt_uid_validation_empty"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/uid_validation_empty_text"
                    style="@style/validation_text_vll" />

                <TextView
                    android:id="@+id/txt_uid_validation_start"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/uid_validation_start_text"
                    style="@style/validation_text_vll" />

                <TextView
                    android:id="@+id/txt_uid_validation_chars"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/uid_validation_chars_text"
                    style="@style/validation_text_vll" />

                <TextView
                    android:text="Shop name"
                    style="@style/form_label" />

                <EditText
                    android:id="@+id/txt_name"
                    android:inputType="text"
                    tools:text="Wilkin's Linear Makati"
                    style="@style/form_text_box" />

                <TextView
                    android:id="@+id/txt_name_validation"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="Please state a your shop's name."
                    style="@style/validation_text_vll" />

                <TextView
                    android:text="Address"
                    style="@style/form_label" />

                <EditText
                    android:id="@+id/txt_address"
                    android:maxLines="2"
                    tools:text="Unit 003 Linear Tower,\nMalugay St., San Antonio,\nMakati City"
                    style="@style/form_text_box" />

                <TextView
                    android:id="@+id/txt_address_validation"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="Please provide a your shop's address."
                    style="@style/validation_text_vll" />

                <TextView
                    android:text="Primary Contact No."
                    style="@style/form_label" />

                <EditText
                    android:id="@+id/txt_cellphone_no"
                    android:inputType="phone"
                    style="@style/form_text_box" />

                <TextView
                    android:id="@+id/txt_cellphone_no_validation"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="Please provide a valid contact number."
                    style="@style/validation_text_vll" />

                <TextView
                    android:text="Alternate Contact No."
                    style="@style/form_label" />

                <EditText
                    android:id="@+id/txt_alt_contact_no"
                    android:inputType="phone"
                    style="@style/form_text_box"/>

                <TextView
                    android:id="@+id/txt_alt_contact_no_validation"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="Please provide a valid alterate contact number."
                    style="@style/validation_text_vll" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/btn_next"
            android:text="Next"
            style="@style/form_button" />

    </LinearLayout>

</LinearLayout>